crates/php-parser/tests/snapshots/nikic_integration_tests__nikic_errorhandling_recovery_4.snap
---
source: crates/php-parser/tests/nikic_integration_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Identifier": "abc"
          },
          "span": {
            "start": 6,
            "end": 9
          }
        }
      },
      "span": {
        "start": 6,
        "end": 11
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Binary": {
              "left": {
                "kind": {
                  "Int": 1
                },
                "span": {
                  "start": 11,
                  "end": 12
                }
              },
              "op": "Add",
              "right": {
                "kind": "Error",
                "span": {
                  "start": 15,
                  "end": 16
                }
              }
            }
          },
          "span": {
            "start": 11,
            "end": 16
          }
        }
      },
      "span": {
        "start": 11,
        "end": 16
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 16
  }
}
